# haskell-todo

./: .gitignore  README.md  todo.cabal
app/CLI/: Main.hs
app/scotty/: Main.hs
src/Domain/: Todo.hs  TodoRepository.hs
